# gcnn

./: .bashrc  .gitignore  AGENTS.md  README.md  dataloaders.py  p4mresnet.py  p4resnet.py  pyproject.toml  resnet.py
configs/: cifar10_flow_matching_sizes.yaml  cifar10_sizes.yaml  mnist_rot_sizes.yaml
notebooks/: cifar10_p4munet_large_inference.ipynb  cifar10_p4munet_large_inference.py  mnist_rot_cifar_overview.ipynb  show_cifar10_equivariance_robustness.py  show_mnist_rot_examples.py  testing.ipynb  train_mnist_rot_resnet.ipynb
scripts/: download_datasets.py  run_cifar10_base_models_avgpool.sh  run_cifar10_flow_matching_p4munet_large.sh  run_cifar10_flow_matching_p4munet_large_smoke.sh  run_mnist_rot_base_models_10x.sh  setup_uv_venv.sh  test_equivariance.py  train.py  train_flow_matching.py  train_mnist.py
